tests/integration/error/function_call_too_few_args.alo
// expect-error: Function 'add' expects 2 argument(s), got 1

fun add(left: int, right: int) -> int {
    return left + right;
}

fun main() -> void {
    add(1);
}
